--- a/apps/video-player/app/globals.css
+++ b/apps/video-player/app/globals.css
@@ -20,3 +20,7 @@ body {
   color: rgb(var(--foreground-rgb));
   /* background-image: url('background.png') */
 }
+
+::-webkit-scrollbar {
+  display: none;
+}
