--- a/apps/admin/app/Table.module.css
+++ b/apps/admin/app/Table.module.css
@@ -8,7 +8,7 @@
   .table td {
     border: 1px solid #dddddd;
     padding: 8px;
-    text-align: left;
+    text-align: center;
   }
   
   .table th {
