--- a/apps/video-player/app/globals.css
+++ b/apps/video-player/app/globals.css
@@ -21,6 +21,16 @@ body {
   /* background-image: url('background.png') */
 }
 
-::-webkit-scrollbar {
+div:not(textarea)::-webkit-scrollbar {
   display: none;
+}
+
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
 }
